# zetBluetoothCROS

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  bl.cpp  blclient.cpp  blserver.cpp  bobj.cpp  core.cpp  coreviews.cpp  funjs.cpp  main.cpp  views.cpp
assets/: index.html
exampl/: CMakeLists.txt
include/: bl.h  blclient.h  blserver.h  bobj.h  core.h  coreviews.h  funjs.h  views.h
